# rust_experimentation

./: .gitignore
bit_twiddling/: Cargo.toml
bit_twiddling/src/: main.rs
codec_test/: Cargo.toml
codec_test/src/: main.rs
datagram_echo/: Cargo.toml  data
datagram_echo/src/: echoer.rs  main.rs
decay/: Cargo.toml  input.txt
decay/src/: input_parser.rs  main.rs
echoserver/: Cargo.toml
echoserver/src/: main.rs
fetchrs/: Cargo.toml
fetchrs/src/: ipify.rs  main.rs
ffi/: test.c  test.rs
fractal/: Cargo.toml
fractal/src/: main.rs
grap/: Cargo.toml  pg730.txt
grap/src/: main.rs
hello_world/: Cargo.toml  Ebola.ipynb  SEIRDh_data_flat.txt
hello_world/src/: main.rs
httpclient/: Cargo.toml
httpclient/examples/: fart.rs
httpclient/src/: main.rs
json_test/: Cargo.toml
json_test/src/: main.rs
levenshtein/: Cargo.toml
levenshtein/src/: lib.rs  main.rs
look_n_say/: Cargo.toml
look_n_say/src/: main.rs
macros/: Cargo.toml
macros/src/: main.rs
mio_pingpong/: Cargo.toml
mio_pingpong/src/: main.rs
multifile/: Cargo.toml
multifile/src/: lib.rs  main.rs
multifile2/: Cargo.toml
multifile2/src/: fart.rs  main.rs
mut_vec/: Cargo.toml
mut_vec/src/: main.rs
parallel1/: Cargo.toml
parallel1/src/: main.rs
pointers/: Cargo.toml
pointers/src/: funcs.rs  main.rs
polymorphic/: Cargo.toml
polymorphic/src/: main.rs
rand/: Cargo.toml
rand/src/: main.rs
redblack/: Cargo.toml
redblack/src/: main.rs  tree.rs
sort/: Cargo.toml
tuple_polymorphism/: Cargo.toml
webapp_test/: Cargo.toml
webapp_test/src/: main.rs
(+3 files in other folders)
