[package]
name = "webapp_test"
version = "0.1.0"
authors = ["wilsoniya"]

[dependencies]
iron = "0.2.6"
router = "0.1.0"
postgres = "0.11"

#[dependencies.iron]
#git = "https://github.com/iron/iron.git"
#
#[dependencies.router]
#git = "https://github.com/iron/router.git"

#[dependencies.urlencoded]
#git = "https://github.com/iron/urlencoded.git"
#
#[dependencies.logger]
#git = "https://github.com/iron/logger.git"
#
#[dependencies.mount]
#git = "https://github.com/iron/mount.git"
#
#[dependencies.persistent]
#git = "https://github.com/iron/persistent.git"
#
#[dependencies.static]
#git = "https://github.com/iron/static.git"
#
#[dependencies.session]
#git = "https://github.com/iron/session.git"
#
#[dependencies.cookie]
#git = "https://github.com/iron/cookie.git"
#
#[dependencies.bodyparser]
#git = "https://github.com/iron/body-parser.git"
